fix(wallet): fix bugs related to wallet feature
